# mumei

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  Cargo.toml  INSTRUCTIONS.md  README.md  README_JA.md  _config.yml  build_and_run.sh  docker-compose.yml  feed.xml  grammar.pest  index.html  index.md  install.sh  instruction.md  llms.txt  mcp_server.py  requirements.txt  robots.txt  self_healing.py  sitemap.xml  std_graph_lib.py
.agents/: environment.yaml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/agents/: mumei-forge.md
.github/skills/: README.md
.github/workflows/: contract-vocabulary.yml  e2e-proof-chain.yml  ffi-contract-tests.yml  generate-std-certs.yml  jekyll-gh-pages.yml  otel-tracing.yml  publish-vscode.yml  release.yml  stdlib-trusted-guard.yml  update-metrics.yml  verify-std.yml
_layouts/: default.html
benchmarks/: run_benchmarks.py
benchmarks/dafny_puzzles/: absolute_value.mm  max.mm  swap.mm
benchmarks/svcomp_style/: array_bounds.mm  integer_overflow.mm  loop_invariant.mm
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  CAPABILITY_SECURITY.md  CHANGELOG.md  CLAUDE_CODE_QUICKSTART.md  CLI.md  CONCURRENCY.md  CROSS_PROJECT_ROADMAP.md  CROSS_SPEC_GUIDE.md  DIAGNOSTICS.md  EDITORS.md  EXAMPLES.md  FEATURES.md  FFI.md  LANGUAGE.md  LSP_INTEGRATION.md  MCP.md  META_ARCHITECT.md  ONBOARDING.md  PATTERNS.md  PLUGIN_GUIDE.md  PROOF_CERTIFICATE.md  REPORT_SCHEMA.md  ROADMAP.md  SESSION_PLANS.md  SPEC_GUIDE.md  STDLIB.md  STDLIB_METRICS.md  STRUCTURED_FEEDBACK_SCHEMA.md  TOOLCHAIN.md  TRUSTED_ATOMS.md  ZERO_HUMAN_CHALLENGE.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  (+1 more)
examples/: capability_demo.mm  concurrent_http.mm  effect_demo.mm  effect_hierarchy_demo.mm  effect_inference_demo.mm  enum_payload.mm  higher_order_demo.mm  http_demo.mm  http_e2e_demo.mm  http_json_demo.mm  json_demo.mm  libc_demo.mm  nlae_integration_demo.mm  order_state_machine.mm  order_state_machine_error.mm  path_safety.mm  pii_pipeline.mm  pii_pipeline_error.mm  regex_path_policy.mm  run_demo.mm  run_with_calls.mm  run_with_impl.mm  secure_http.mm  str_demo.mm  verified_config.mm  verified_server.mm
mumei-core/: Cargo.toml
mumei-core/src/: ast.rs  cross_spec.rs  emitter.rs  hir.rs  lib.rs  lowering.rs  manifest.rs  mir.rs  mir_analysis.rs  proof_cert.rs  reconstruction_loss.rs  registry.rs  resolver.rs  structured_feedback.rs  verification.rs
mumei-core/src/cross_spec/: drift_detector.rs  mod.rs  verifier.rs
mumei-core/src/ffi/: crypto.rs  file.rs  http.rs  json.rs  mod.rs
mumei-core/src/mir_analysis/: gen_kill.rs  liveness.rs  move_analysis.rs  temporal_effects.rs
mumei-core/src/parser/: ast.rs  expr.rs  item.rs  lexer.rs  mod.rs  pattern.rs  token.rs
mumei-core/src/proof_cert/: bundle_io.rs  generation.rs  models.rs  review.rs  status.rs  validation.rs
mumei-core/src/resolver/: cache.rs  dependencies.rs  imports.rs  metrics.rs
mumei-core/src/verification/: executor.rs  fragment.rs  loop_detector.rs  mod.rs  module_env.rs  mutation.rs  nlae_reporter.rs  profiler.rs  property_based.rs  spec_validation.rs  spurious_detection.rs  support.rs  tests.rs  translator.rs  types.rs  vacuity.rs
mumei-core/src/verification/support/: call_graph.rs  dataflow_inference.rs  effects.rs  law_verification.rs  resource_safety.rs
mumei-core/src/verification/translator/: constraints.rs  context.rs  expr.rs  pattern.rs  stmt.rs  temporal.rs  z3_types.rs
mumei-core/tests/: fragment_detector.rs  p8c_escalation.rs
mumei-core/tests/fixtures/: fragment_array.mm  fragment_linear.mm  fragment_nonlinear.mm  fragment_quantifier.mm  fragment_temporal.mm
mumei-emit-json/: Cargo.toml
mumei-emit-json/src/: lib.rs
mumei-emit-llvm/: Cargo.toml
mumei-emit-llvm/src/: binary.rs  codegen.rs  jit.rs  lib.rs
mumei-emit-llvm/src/codegen/: driver.rs  expr_emit.rs  lowering.rs  pattern_emit.rs  stmt_emit.rs  task_runtime.rs
mumei-emit-proofbook/: Cargo.toml
mumei-emit-python/: Cargo.toml
mumei-emit-python/src/: lib.rs
mumei-emit-rust/: Cargo.toml
mumei-emit-rust/src/: lib.rs
mumei-ffi-tests/: Cargo.toml
paper/: feed.xml  index.md
runtime/: mumei_runtime.c
schema/: proof-cert.schema.json
scripts/: bundle_std_certs.py  check_contract_vocabulary.py  ffi_contract_test_gen.py  generate_formula.py  generate_stdlib_metrics.py  install.sh  test_e2e_proof_chain.py
src/: agent.rs  ast.rs  cli.rs  codegen.rs  emitter.rs  feedback.rs  hir.rs  inspect.rs  linker.rs  lsp.rs  main.rs  manifest.rs  mir.rs  mir_analysis.rs  parser.rs  pipeline.rs  proof_cert.rs  resolver.rs  setup.rs  telemetry.rs  verification.rs
std/: alloc.mm  bitwise.mm  compliance.mm  contracts.mm  core.mm  core_guards.mm  core_predicates.mm  core_ranges.mm  effects.mm  file.mm  hash.mm  http.mm  http_secure.mm  http_server.mm  iter.mm  json.mm  libc.mm  list.mm  option.mm  ownership.mm  prelude.mm  result.mm  settlement.mm  string_utils.mm
tests/: compliance_cli.rs  effect_polymorphism_basic.mm  effect_polymorphism_mixed.mm  effect_polymorphism_multi.mm  effect_polymorphism_violation.mm  ownership_cli.rs  settlement_cli.rs  test_array_forall_ensures.mm  test_array_forall_store_chain.mm  test_array_store.mm  test_array_store_multi.mm  test_borrow_tracking.mm  test_call_with_contract.mm  test_capability_evaluation.mm  test_check_contract_vocabulary.py  test_compliance.mm  test_compliance_negative.mm  test_concurrency.rs  test_concurrency_runtime.mm  test_contracts.mm  test_contracts_expanded.mm  test_contracts_expanded_error.mm  test_contradiction.mm  test_cross_atom_chain.mm  test_cross_spec.mm  test_cross_spec.rs  test_cross_spec_multi_file.mm  test_cross_spec_multi_file_dep.mm  test_crypto_hash.mm  test_crypto_signature.mm  test_data_flow_trace.rs  test_decidable_fragment.rs  test_differential_fuzz.rs  test_dynamic_path_verification.mm  test_effect_basic.mm  test_effect_composite.mm  test_effect_http.mm  test_effect_parameterized.mm  test_effect_propagation.mm  test_effect_pure.mm  (+66 more)
visualizer/: app.py  generate_graph.py  std_graph.md
(+116 files in other folders)
