[workspace]
members = ["mumei-core", "mumei-emit-llvm", "mumei-emit-json"]

[package]
name = "mumei"
version = "0.2.0"
edition = "2021"
description = "Mathematical Proof-Driven Programming Language — formally verified with Z3, compiled to LLVM IR"
license = "MIT"
repository = "https://github.com/mumei-lang/mumei"
homepage = "https://github.com/mumei-lang/mumei"
keywords = ["formal-verification", "z3", "llvm", "programming-language", "proof"]
categories = ["compilers", "development-tools"]
readme = "README.md"

# cargo install mumei で mumei バイナリがインストールされる
[[bin]]
name = "mumei"
path = "src/main.rs"

[dependencies]
mumei-core = { path = "mumei-core" }
mumei-emit-llvm = { path = "mumei-emit-llvm" }
mumei-emit-json = { path = "mumei-emit-json" }
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7", features = ["fancy"] }
