[workspace]
members = ["mumei-core", "mumei-emit-llvm", "mumei-emit-json", "mumei-emit-proofbook", "mumei-emit-rust", "mumei-emit-python", "mumei-ffi-tests"]

[package]
name = "mumei"
version = "0.6.12"
edition = "2021"
description = "Mathematical Proof-Driven Programming Language — formally verified with Z3, compiled to LLVM IR"
license = "Apache-2.0"
repository = "https://github.com/mumei-lang/mumei"
homepage = "https://github.com/mumei-lang/mumei"
keywords = ["formal-verification", "z3", "llvm", "programming-language", "proof"]
categories = ["compilers", "development-tools"]
readme = "README.md"

# cargo install mumei で mumei バイナリがインストールされる
[[bin]]
name = "mumei"
path = "src/main.rs"

[dependencies]
mumei-core = { path = "mumei-core" }
mumei-emit-llvm = { path = "mumei-emit-llvm" }
mumei-emit-json = { path = "mumei-emit-json" }
mumei-emit-proofbook = { path = "mumei-emit-proofbook" }
mumei-emit-rust = { path = "mumei-emit-rust" }
mumei-emit-python = { path = "mumei-emit-python" }
clap = { version = "4.4", features = ["derive"] }
encoding_rs = "0.8"
toml = "0.8"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7", features = ["fancy"] }
regex = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", optional = true }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client"], optional = true }

[features]
static-link-z3 = ["mumei-core/static-link-z3"]
otel = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "mumei-core/otel",
]
