[package]
name = "mumei-core"
version = "0.2.0"
edition = "2021"
description = "Core library for the Mumei proof-driven programming language"
license = "MIT"
repository = "https://github.com/mumei-lang/mumei"

[dependencies]
z3 = "0.12"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
sha2 = "0.10"
lazy_static = "1.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"
dirs = "5.0"
