[package]
name = "mumei-emit-json"
version = "0.6.12"
edition = "2021"
description = "Verified JSON metadata emitter for the Mumei compiler"
license = "Apache-2.0"
repository = "https://github.com/mumei-lang/mumei"

[dependencies]
mumei-core = { path = "../mumei-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
