[package]
name = "mumei-emit-llvm"
version = "0.6.0"
edition = "2021"
description = "LLVM IR emitter for the Mumei compiler"
license = "MIT"
repository = "https://github.com/mumei-lang/mumei"

[dependencies]
mumei-core = { path = "../mumei-core" }
inkwell = { version = "0.5.0", default-features = false, features = ["llvm17-0"] }
llvm-sys = "170.4.0"
libc = "0.2"
