[package]
name = "mumei-emit-python"
version = "0.6.12"
edition = "2021"
description = "FFI glue code generator for Python — generates ctypes-based wrappers for compiled mumei binaries"
license = "Apache-2.0"
repository = "https://github.com/mumei-lang/mumei"

[dependencies]
mumei-core = { path = "../mumei-core" }
