[package]
name = "mumei-emit-rust"
version = "0.2.0"
edition = "2021"
description = "FFI glue code generator for Rust — generates extern \"C\" bindings + safe wrappers for compiled mumei binaries"
license = "MIT"
repository = "https://github.com/mumei-lang/mumei"

[dependencies]
mumei-core = { path = "../mumei-core" }
