[package]
name = "mumei-emit-rust"
version = "0.6.12"
edition = "2021"
description = "FFI glue code generator for Rust — generates extern \"C\" bindings + safe wrappers for compiled mumei binaries"
license = "Apache-2.0"
repository = "https://github.com/mumei-lang/mumei"

[dependencies]
mumei-core = { path = "../mumei-core" }
